--- a/irqbalance.service
+++ b/irqbalance.service
@@ -4,7 +4,7 @@ After=syslog.target
 
 [Service]
 Type=oneshot
-ExecStart=/usr/bin/irqbalance --one-shot
+ExecStart=/usr/bin/irqbalance --oneshot
 
 [Install]
 WantedBy=multi-user.target
