irqbalance: Autospec creation for update from version 1.2.0 to version 1.3.0
Douglas Caetano dos Santos (1):
      Add "--version|-V" command line option to get irqbalance's version

Krister Johansen (2):
      Oneshot mode doesn't exit.
      Teach irqbalance about Intel CoD.

Lars Wendler (1):
      Prefer pkgconfig to check for ncursesw.

Neil Horman (16):
      Fix string allocation issue in sock_handle
      Fix some string sizing issues
      Prevent irqbalance from running in a container
      Remove without-glib2 option
      Add --without-irqbalance-ui option to configure
      Fix horribleness in irqbalance-ui
      Merge pull request #39 from szepeviktor/travis
      Fix some travis ci issues in irqbalance-ui
      fix more travis ci issues with irqbalance-ui
      Merge pull request #55 from szepeviktor/patch-2
      misc: add sample udev rule
      Types: clean out unused variables from irq_info struct
      ui: Make some stack variables bigger so the compiler stops complaining
      cputree: Cleanup unused variable
      Merge pull request #58 from wanghaibin-mouse/master
      Bumping release number

PJ Waskiewicz (6):
      Merge pull request #37 from fabled/master
      Merge pull request #48 from jslepicka/master
      Merge pull request #53 from douglascaetano/master
      Merge pull request #49 from kmjohansen/kj-cod
      Merge pull request #51 from szepeviktor/patch-1
      Merge pull request #42 from Polynomial-C/pkgconfig_ncurses

Timo Teräs (3):
      Add missing #include <string.h> in user interface files
      Fix struct msghdr initialization
      fix aarch64 compile error due to undefined variable

Viktor Szépe (4):
      Add CI
      Fix aAssigning IRQ affinity on the wrong NUMA node
      Fix for loop for C99
      Adding Travis bagde

jslepicka (1):
      x86/x64: Exclude devices with legacy IRQ 255

wanghaibin (2):
      irqbalance: Fix the compile warning.
      irqbalance: optimize the check platform device func.

wanghaibin-mouse 

--- a/options.conf
+++ b/options.conf
@@ -1,3 +1,9 @@
+[package]
+name = irqbalance
+url = https://github.com/Irqbalance/irqbalance/archive/v1.3.0.tar.gz
+archives = 
+giturl = https://github.com/Irqbalance/irqbalance.git
+
 [autospec]
 # build 32 bit libraries
 32bit = false
@@ -31,6 +37,8 @@ pgo = false
 security_sensitive = false
 # do not run test suite
 skip_tests = false
+# add .so files to the lib package instead of dev
+so_to_lib = false
 # configure build for avx2
 use_avx2 = false
 # add clang flags
