--- a/options.conf
+++ b/options.conf
@@ -1,9 +1,10 @@
 [package]
 name = irqbalance
-url = https://github.com/Irqbalance/irqbalance/archive/v1.6.0/irqbalance-1.6.0.tar.gz
+url = https://github.com/Irqbalance/irqbalance/archive/v1.7.0/irqbalance-1.7.0.tar.gz
 archives = 
 giturl = https://github.com/Irqbalance/irqbalance.git
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
@@ -13,7 +14,7 @@ allow_test_failures = false
 # unset %build ld_as_needed variable
 asneeded = false
 # this package is trusted enough to automatically update (used by other tools)
-autoupdate = false
+autoupdate = true
 # extend flags with '-std=gnu++98
 broken_c++ = false
 # disable parallelization during build
@@ -38,6 +39,8 @@ no_autostart = false
 nodebug = false
 # disable stripping binaries
 nostrip = false
+# configure build also for openmpi
+openmpi = false
 # optimize build for size over speed
 optimize_size = false
 # set profile for pgo
